# opendart-fss-python

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
opendart_fss/: __init__.py  client.py  constants.py  exceptions.py
opendart_fss/api/: __init__.py  base.py  disclosure.py  financial.py  major_event.py  registration.py  report.py  shareholder.py
opendart_fss/models/: __init__.py  base.py  disclosure.py  financial.py  major_event.py  registration.py  report.py  shareholder.py
opendart_fss/verification/: __init__.py  config.py  rate_limiter.py  reporter.py  runner.py
scripts/: scrape_api_specs.py  verify_endpoints.py
specs/: all_apis.json  disclosure.json  financial.json  major_event.json  registration.json  report.json  shareholder.json
tests/: __init__.py  conftest.py  test_client.py  test_exceptions.py  test_models.py
tests/integration/: conftest.py  test_verification.py
