[project]
name = "opendart-fss"
dynamic = ["version"]
description = "금융감독원 전자공시시스템 OpenDART API Python SDK"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "OpenDART FSS Python Contributors" }]
keywords = ["opendart", "dart", "fss", "finance", "korea", "disclosure", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "msgspec>=0.20.0",
    "python-dotenv>=1.2.1",
]

[project.urls]
Homepage = "https://github.com/hypn4/opendart-fss-python"
Documentation = "https://github.com/hypn4/opendart-fss-python#readme"
Repository = "https://github.com/hypn4/opendart-fss-python"

[dependency-groups]
dev = [
    "crawl4ai>=0.8.0",
    "datamodel-code-generator>=0.53.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "opendart_fss/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["opendart_fss"]
